<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/LayoutModifyBike_TextInputEditText_NameBike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        />

    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/count_bike_method_change"/>

    <ToggleButton
        android:id="@+id/toggleButtonModifyCountingMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/hours"
        android:textOff="@string/km" />


</LinearLayout>