<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_add_maintenance_fill_name"/>

    <EditText
        android:paddingTop="30dp"
        android:id="@+id/CustomDialog_EditText_NameMaintenance"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_maintenance_type"/>

    <EditText
        android:paddingTop="30dp"
        android:id="@+id/CustomDialog_EditText_NbHoursMaintenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_maintenance_nb_hours"/>

</LinearLayout>