<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FragmentManageMaintenances_ViewRoot"
    tools:context="fr.nextgear.mesentretiensmoto.mvp.manage_maintenances.FragmentManageMaintenances">


        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:id="@+id/FragmentManageMaintenances_RecyclerView_ListMaintenances"/>




    <TextView
        android:id="@+id/FragmentManageMaintenances_TextView_NoMaintenanceToShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/text_no_maintenance_to_show"/>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/FragmentManageMaintenances_FloatingActionMenu_AddMaintenanceDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ld_side_margin"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_anchor="@id/FragmentManageMaintenances_RecyclerView_ListMaintenances"
        app:layout_anchorGravity="bottom|right|end"
        app:menu_fab_size="normal"
        app:menu_showShadow="true"
        app:menu_shadowColor="#66000000"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_colorNormal="@color/darkGreen"
        app:menu_colorPressed="@color/darkGreen"
        app:menu_colorRipple="#99FFFFFF"
        app:menu_animationDelayPerItem="50"
        app:menu_icon="@drawable/ic_add_black_24dp"
        app:menu_buttonSpacing="0dp"
        app:menu_labels_margin="0dp"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_paddingTop="4dp"
        app:menu_labels_paddingRight="8dp"
        app:menu_labels_paddingBottom="4dp"
        app:menu_labels_paddingLeft="8dp"
        app:menu_labels_padding="8dp"
        app:menu_labels_textColor="#FFFFFF"
        app:menu_labels_textSize="14sp"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_colorNormal="#333333"
        app:menu_labels_colorPressed="#444444"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_showShadow="true"
        app:menu_labels_singleLine="false"
        app:menu_labels_ellipsize="none"
        app:menu_labels_maxLines="-1"
        app:menu_labels_style="@style/AppTheme"
        app:menu_labels_position="left"
        app:menu_openDirection="up"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_fab_label="@string/cancel"
        app:menu_fab_show_animation="@anim/jump_from_down"
        app:menu_fab_hide_animation="@anim/hide_to_bottom">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/FragmentManageMaintenances_FloatingActionButton_AddMaintenanceDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            app:fab_size="mini"
            app:fab_colorNormal="@color/darkGreen"
            app:fab_colorPressed="@color/darkGreen"
            app:fab_colorRipple="#99FFFFFF"
            app:fab_label="@string/add_maintenance_done" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/FragmentManageMaintenances_FloatingActionButton_AddMaintenanceToDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/indigo"
            app:fab_colorPressed="@color/indigo"
            app:fab_colorRipple="#99FFFFFF"
            android:src="@drawable/ic_add_black_24dp"
            app:fab_size="mini"
            app:fab_label="@string/add_maintenance_to_do" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
